--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-redux-app",
+  "name": "ecommerce-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://mohanthiyagu.github.io/ecommerce-app",
